# iec-checker

./: .ctags  .dockerignore  .gitignore  CHANGES.md  Dockerfile  Makefile  README.md  checker.py  dune-project  iec_checker.example.json  iec_checker.opam  requirements-dev.txt  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codespell.yml  docker-nightly.yml  docker-release.yml  pycodestyle.yml  pytest.yml  unit_tests.yml
src/analysis/: control_flow_analysis.ml  control_flow_analysis.mli  cyclomatic_complexity.ml  cyclomatic_complexity.mli  declaration_analysis.ml  declaration_analysis.mli  dune  unused_variable.ml  unused_variable.mli  use_define.ml  use_define.mli
src/core/: ast_util.ml  ast_util.mli  cfg.ml  cfg.mli  common.ml  config.ml  config.mli  dump.ml  dump.mli  dune  env.ml  env.mli  error.ml  error.mli  plcopen.ml  plcopen.mli  scope.ml  scope.mli  sel.ml  sel.mli  syntax.ml  syntax.mli  tok_info.ml  tok_info.mli  warn.ml  warn.mli  warn_output.ml  warn_output.mli
src/lib/: checkerLib.ml  checkerLib.mli  detector.ml  detector.mli  dune  plcopen_cp1.ml  plcopen_cp1.mli  plcopen_cp13.ml  plcopen_cp13.mli  plcopen_cp16.ml  plcopen_cp16.mli  plcopen_cp17.ml  plcopen_cp17.mli  plcopen_cp2.ml  plcopen_cp2.mli  plcopen_cp25.ml  plcopen_cp25.mli  plcopen_cp26.ml  plcopen_cp26.mli  plcopen_cp28.ml  plcopen_cp28.mli  plcopen_cp3.ml  plcopen_cp3.mli  plcopen_cp4.ml  plcopen_cp4.mli  plcopen_cp6.ml  plcopen_cp6.mli  plcopen_cp8.ml  plcopen_cp8.mli  plcopen_cp8_cp28.ml  plcopen_cp9.ml  (+33 more)
src/parser/: dune  lexer.mll  location.ml  location.mli  parser.messages  parser.mly
test/: dune  test_cfa.py  test_cfg.py  test_control_flow_analysis.py  test_core.py  test_declaration_analysis.py  test_env.ml  test_merge_files.py  test_parser.ml  test_parser.py  test_plcopen.py  test_plcopen_xml.py  test_scopes.ml  test_self_assignment.py  test_selxml.py  test_unused_variable.py  test_use_define.py  test_zerodiv.py
(+98 files in other folders)
